--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,25 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at https://guides.rubyonrails.org/i18n.html.
+ja:
+  activerecord:
+    attributes:
+      user:
+        nickname: ユーザー名
+        email: メールアドレス
+        password: パスワード
+      errors:
+        messages:
+          blank: "を入力してください"
+          invalid: "を正しく入力してください"
+          taken: "は既に使用されています"
+
+  models:
+
+      order_form:
+        postal_code: 郵便番号
+        prefecture_id: 都道府県
+        city: 市町村
+        street_address: 番地
+        phone_number: 電話番号
+        token: クレジットカード情報
 
 en:
   hello: "Hello world"
