--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,4 +22,28 @@ ja:
         token: クレジットカード情報
 
 en:
-  hello: "Hello world"
+  invalid_email_password: "Please enter a valid email and password"
+  search: "search"
+  signup: "Sign up"
+  login: "Login"
+  username: "Username"
+  email: "Email"
+  password: "Password"
+  password_length: "  6 characters minimum"
+  password_confirmation: "Password Confirmation"
+  password_confirmation_error: "Please enter the password confirmation correctly"
+  place_input_placeholder: "Enter a place"
+  unknown_tourist_spots: "Tell me about lesser-known tourist spots"
+  popular_restaurants: "Tell me about popular restaurants among locals"
+  local_cuisine: "Tell me about restaurants where I can enjoy local cuisine and ingredients"
+  recommended_cafes: "Tell me about recommended cafes"
+  historical_sites: "Tell me about local historical sites"
+  scenic_spots: "Tell me about beautiful scenic spots"
+  local_market: "Tell me about local markets where I can buy specialty products and souvenirs"
+
+  create_travel_plan_title: "Create Your Travel Plan"
+  create_travel_plan_description: "Choose your destination and create your travel plan."
+  create_customized_plan_title: "Create Your Own Customized Plan"
+  create_customized_plan_description: "Select detailed preferences and create your own customized travel plan."
+  inspiration_guide_title: "Inspiration Guide"
+  inspiration_guide_description: "Select your destination and templates to receive recommendations for popular spots."
