--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,6 +22,7 @@ ja:
         token: クレジットカード情報
 
 en:
+  currency: "USD"
   invalid_email_password: "Please enter a valid email and password"
   search: "search"
   signup: "Sign up"
