--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -49,10 +49,10 @@ ja:
   historical_sites: "地元の歴史的建造物を教えて"
   scenic_spots: "美しい景色を楽しめるスポットを教えて"
   local_market: "ローカルマーケットや地元の特産品やお土産を買うことができる場所を教えて"
-  family_friendly_spots: "家族連れにおすすめのスポットを教えてください"
-  night_life: "おすすめのバーやクラブを教えてください"
+  family_friendly_spots: "家族連れにおすすめのスポットを教えて"
+  night_life: "おすすめのバーやクラブを教えて"
   art_galleries: "美術館やアートギャラリーを教えてください"
-  shopping_districts: "ショッピングを楽しめるエリアを教えてください"
+  shopping_districts: "ショッピングを楽しめるエリアを教えて"
 
 
 
