--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,7 +53,7 @@ en:
   password_length: "  6 characters minimum"
   password_confirmation: "Password Confirmation"
   password_confirmation_error: "Please enter the password confirmation correctly"
-  place_input_placeholder: "Enter a place"
+  place_input_placeholder: "Enter a place.."
   unknown_tourist_spots: "Tell me about lesser-known tourist spots"
   popular_restaurants: "Tell me about popular restaurants among locals"
   local_cuisine: "Tell me about restaurants where I can enjoy local cuisine and ingredients"
