--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -206,3 +206,66 @@ en:
       not_saved:
         one: "1 error prohibited this %{resource} from being saved:"
         other: "%{count} errors prohibited this %{resource} from being saved:"
+zh-CN:
+  devise:
+    confirmations:
+      confirmed: "您的电子邮件地址已成功确认。"
+      send_instructions: "您将在几分钟内收到一封带有确认电子邮件地址指南的邮件。"
+      send_paranoid_instructions: "如果您的电子邮件地址存在于我们的数据库中，您将在几分钟内收到一封带有确认电子邮件地址指南的邮件。"
+    failure:
+      already_authenticated: "您已经登录。"
+      inactive: "您的账户尚未激活。"
+      invalid: "无效的 %{authentication_keys} 或密码。"
+      locked: "您的账户已被锁定。"
+      last_attempt: "您还有一次尝试机会，之后您的账户将被锁定。"
+      not_found_in_database: "无效的 %{authentication_keys} 或密码。"
+      timeout: "您的会话已过期。请重新登录以继续。"
+      unauthenticated: "您需要登录或注册才能继续。"
+      unconfirmed: "在继续之前，您需要确认您的电子邮件地址。"
+    mailer:
+      confirmation_instructions:
+        subject: "确认指南"
+      reset_password_instructions:
+        subject: "重设密码指南"
+      unlock_instructions:
+        subject: "解锁指南"
+      email_changed:
+        subject: "电子邮件已更改"
+      password_change:
+        subject: "密码已更改"
+    omniauth_callbacks:
+      failure: "无法通过 %{kind} 验证您，因为 \"%{reason}\"。"
+      success: "已成功通过 %{kind} 账户验证。"
+    passwords:
+      no_token: "您不能在未经密码重设邮件的情况下访问此页面。如果您是从密码重设邮件中访问此页面的，请确保您使用了提供的完整URL。"
+      send_instructions: "您将在几分钟内收到一封带有重设密码指南的邮件。"
+      send_paranoid_instructions: "如果您的电子邮件地址存在于我们的数据库中，您将在几分钟内收到一个密码恢复链接。"
+      updated: "您的密码已成功更改。您现在已登录。"
+      updated_not_active: "您的密码已成功更改。"
+    registrations:
+      destroyed: "再见！您的账户已成功取消。我们期待再次见到您。"
+      signed_up: "欢迎！您已成功注册。"
+      signed_up_but_inactive: "您已成功注册。然而，我们无法让您登录，因为您的账户尚未激活。"
+      signed_up_but_locked: "您已成功注册。然而，我们无法让您登录，因为您的账户已被锁定。"
+      signed_up_but_unconfirmed: "一条带有确认链接的消息已发送到您的电子邮件地址。请按照链接激活您的账户。"
+      update_needs_confirmation: "您已成功更新您的账户，但我们需要验证您的新电子邮件地址。请查收您的邮件，并按照确认链接确认您的新电子邮件地址。"
+      updated: "您的账户已成功更新。"
+      updated_but_not_signed_in: "您的账户已成功更新，但由于您的密码已更改，您需要重新登录。"
+    sessions:
+      signed_in: "登录成功。"
+      signed_out: "已成功登出。"
+      already_signed_out: "已成功登出。"
+    unlocks:
+      send_instructions: "您将在几分钟内收到一封带有解锁账户指南的邮件。"
+      send_paranoid_instructions: "如果您的账户存在，您将在几分钟内收到一封带有解锁指南的邮件。"
+      unlocked: "您的账户已成功解锁。请登录以继续。"
+  errors:
+    messages:
+      already_confirmed: "已经确认过了，请尝试登录"
+      confirmation_period_expired: "需要在 %{period} 内确认，请请求新的确认链接"
+      expired: "已过期，请请求新的确认链接"
+      not_found: "未找到"
+      not_locked: "未被锁定"
+      not_saved:
+        one: "1个错误导致 %{resource} 无法保存:"
+        other: "%{count}个错误导致 %{resource} 无法保存:"
