--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,6 +21,7 @@ en:
   get_recommendation_for_hotel_btn: "Search"
   provide_your_hotel_preferences: "Hotels"
   calender: "Select dates"
+  price: "Price"
 
   inspiration_guide: "Inspiration Guide"
 
