--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -49,6 +49,7 @@ ja:
   get_recommendation_for_hotel_btn: "検索する"
   provide_your_hotel_preferences: "ホテル"
   calender: "日付を選択"
+  price: "価格"
 
   inspiration_guide: "インスピレーションガイド"
 
