--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -19,6 +19,7 @@ zh-CN:
   get_recommendation_for_hotel_btn: "搜索"
   provide_your_hotel_preferences: "酒店"
   calender: "选择日期"
+  price: "价格"
 
   inspiration_guide: "灵感指南"
   
